--- a/workflow.yml
+++ b/workflow.yml
@@ -15,13 +15,13 @@ jobs:
       - name: setup
         run: ./setup.sh
   run_batch:
-    depends_on:
+    needs:
       - setup
     steps:
       - name: run batch job
         run: ./run_batch.sh
   run_iperf:
-    depends_on:
+    needs:
       - setup
     steps:
       - name: run iperf
