--- a/workflow.yml
+++ b/workflow.yml
@@ -26,16 +26,6 @@ jobs:
           resource:
             type: compute-clusters
             label: Resource
-          jsource:
-            type: dropdown
-            label: Select benchmark to run
-            tooltip: Select which built-in benchmark to run
-            options:
-              - label: Standard
-                value: standard
-              - label: Minimal
-                value: minimal
-            default: standard
           nnodes:
             label: Number of Nodes
             type: number
@@ -50,6 +40,11 @@ jobs:
         type: group
         label: IOR Settings
         items:
+          file:
+            label: Test File
+            type: string 
+            default: /lustre/bench/ior/run_$SLURM_JOB_ID/out
+            tooltip: '-o: the file to use in the test'
           transfer_size:
             label: Transfer Size
             type: string
@@ -95,3 +90,17 @@ jobs:
             type: boolean
             default: true
             tooltip: '-C: changes task ordering to n+1 ordering for readback'
+      mdtest:
+        type: group
+        label: MDTest
+        items:
+          jsource:
+            type: dropdown
+            label: Select benchmark to run
+            tooltip: Select which built-in benchmark to run
+            options:
+              - label: Standard
+                value: standard
+              - label: Minimal
+                value: minimal
+            default: standard
